projects/yt-dlp-server/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-dlp-worker
  namespace: yt-dlp
  labels:
    app: yt-dlp-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yt-dlp-worker
  template:
    metadata:
      labels:
        app: yt-dlp-worker
    spec:
      containers:
      - name: worker
        image: ghcr.io/aimamit/yt-dlp-server:sha-f7f1fa0
        command: ["tini", "--", "celery", "-A", "app.core.celery_app:celery_app", "worker", "-Q", "downloads", "--loglevel=info"]
        resources:
          limits:
            memory: 1Gi
            cpu: 1000m
          requests:
            memory: 512Mi
            cpu: 500m
        volumeMounts:
        - name: assets-storage
          mountPath: /assets
      volumes:
      - name: assets-storage
        persistentVolumeClaim:
          claimName: yt-dlp-assets-pvc
