projects/yt-dlp-server/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-dlp-api
  namespace: yt-dlp
  labels:
    app: yt-dlp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yt-dlp-api
  template:
    metadata:
      labels:
        app: yt-dlp-api
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: api
        imagePullPolicy: Always
        image: ghcr.io/aimamit/yt-dlp-server:fc25ed575b028dd6200d1276112bf039f54d67ef
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            memory: 256Mi
            cpu: 200m
        volumeMounts:
        - name: assets-storage
          mountPath: /assets
        - name: cookies-secret
          mountPath: /app/cookies.txt
          subPath: cookies.txt
          readOnly: true
      volumes:
      - name: assets-storage
        persistentVolumeClaim:
          claimName: yt-dlp-assets-pvc
      - name: cookies-secret
        secret:
          secretName: yt-dlp-cookies
          optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: yt-dlp-api-svc
  namespace: yt-dlp
spec:
  selector:
    app: yt-dlp-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
