projects/yt-dlp-server/warp-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warp-proxy
  namespace: yt-dlp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warp-proxy
  template:
    metadata:
      labels:
        app: warp-proxy
    spec:
      containers:
      - name: warp
        image: caomingjun/warp
        ports:
        - containerPort: 1080
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: warp-proxy-svc
  namespace: yt-dlp
spec:
  selector:
    app: warp-proxy
  ports:
  - port: 1080
    targetPort: 1080
