projects/yt-dlp-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yt-dlp-api-ingress
  namespace: yt-dlp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - yt-api.0xamit.com
    secretName: yt-dlp-api-tls
  rules:
  - host: yt-api.0xamit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yt-dlp-api-svc
            port:
              number: 8000
